[package]
authors = ["Akihiro Yamamoto <ak1211@mail.ak1211.com>"]
edition = "2018"
readme = "README.md"
name = "hello-nucleo-oled"
version = "0.1.0"

[dependencies]
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
cortex-m = "0.6.0"
embedded-graphics = "0.4.9"
embedded-hal = "0.2.2"
panic-halt = "0.2.0"
ssd1331 = "0.1.3"

[dependencies.stm32f30x-hal]
features = ["rt"]
version = "0.2.0"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "hello-nucleo-oled"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
